# negativeauth

./: Cargo.toml  README.md
src/: main.rs
src/auth/: authclients.rs  mod.rs
src/config/: default-config.toml  loader.rs  mod.rs  structs.rs
src/web/: handlers.rs  mod.rs  server.rs
