[package]
name = "negativeauth"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
anyhow = "1"

# -> serde
serde = { version = "1", features = ["derive"] }
toml = "0.7"

# -> tokio
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# web
ntex = { version = "0.7", features = ["tokio"] }
oauth2 = "4.4"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
