[package]
name = "negativeauth"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
anyhow = "1"

# -> serde
serde = { version = "1", features = ["derive"] }
toml = "0.7"
serde_json = "1"

# -> tokio
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# web
ntex = { version = "0.7", features = ["tokio"] }
oauth2 = "4.4"
# this project taught me a valuable lesson: avoid the redis crate :)
# (lack of logging, atrocious usability)
rustis = { git = 'https://github.com/orion-tran/rustis.git', features = ["tokio-runtime"] }
cookie = "0.17.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
